# speex-1.2rc1

./: CMakeLists.txt  README.md  adapter.cpp  adapter.h  speex.cpp  speexproj.h
libspeex/: speex.c
